--- a/app/src/main/res/layout/activity_add_room.xml
+++ b/app/src/main/res/layout/activity_add_room.xml
@@ -34,7 +34,7 @@
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <TextView android:id="@+id/save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
