--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,9 +79,151 @@
 
         <TableLayout android:id="@+id/table"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:showDividers="middle"
+            android:divider="@drawable/divider">
 
+            <TableRow
+                android:gravity="center"
+                android:weightSum="2"
+                android:showDividers="middle"
+                android:divider="@drawable/divider">
 
+                <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:elevation="15dp"
+                    android:background="@drawable/box1"
+                    android:id="@+id/livingroom">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="45dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:scaleType="fitXY"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:id="@+id/image"
+                        android:src="@drawable/bedroom"
+                        app:tint="@color/purple_1"
+                        android:layout_marginTop="17dp"/>
+
+                    <TextView android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Living Room"
+                        android:textSize="17dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textColor="@color/purple_1"
+                        app:layout_constraintTop_toBottomOf="@id/image"/>
+
+                    <TextView android:id="@+id/devices"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="x3 devices"
+                        android:textSize="17dp"
+                        android:gravity="center"
+                        android:textColor="@color/purple_1"
+                        app:layout_constraintTop_toBottomOf="@id/name"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:background="@drawable/box1"
+                    android:elevation="15dp"
+                    android:id="@+id/kitchen">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="45dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:scaleType="fitXY"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:id="@id/image"
+                        android:src="@drawable/kitchen"
+                        app:tint="@color/purple_1"
+                        android:layout_marginTop="17dp"/>
+
+                    <TextView android:id="@id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Kitchen"
+                        android:textSize="17dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textColor="@color/purple_1"
+                        app:layout_constraintTop_toBottomOf="@id/image"/>
+
+                    <TextView android:id="@id/devices"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="x2 devices"
+                        android:textSize="17dp"
+                        android:gravity="center"
+                        android:textColor="@color/purple_1"
+                        app:layout_constraintTop_toBottomOf="@id/name"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </TableRow>
+
+            <TableRow android:gravity="center"
+                android:weightSum="2"
+                android:showDividers="middle"
+                android:divider="@drawable/divider">
+
+                <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:background="@drawable/box1"
+                    android:elevation="15dp"
+                    android:id="@+id/bathroom">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="45dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:scaleType="fitXY"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:id="@id/image"
+                        android:src="@drawable/bathroom"
+                        app:tint="@color/purple_1"
+                        android:layout_marginTop="17dp"/>
+
+                    <TextView android:id="@id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Bathroom"
+                        android:textSize="17dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textColor="@color/purple_1"
+                        app:layout_constraintTop_toBottomOf="@id/image"/>
+
+                    <TextView android:id="@id/devices"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="x3 devices"
+                        android:textSize="17dp"
+                        android:gravity="center"
+                        android:textColor="@color/purple_1"
+                        app:layout_constraintTop_toBottomOf="@id/name"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    xmlns:app="http://schemas.android.com/apk/res-auto">
+            </TableRow>
         </TableLayout>
 
     </ScrollView>
@@ -102,7 +244,7 @@
             android:layout_height="52dp"
             android:background="@android:color/transparent"
             android:src="@drawable/home"
-            app:tint="#909090"
+            app:tint="@color/purple_1"
             android:scaleType="centerInside"
             android:padding="8dp" />
 
@@ -111,6 +253,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:gravity="center"
+                android:textColor="@color/purple_1"
                 android:text="Home"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -171,7 +314,7 @@
             android:layout_height="52dp"
             android:background="@android:color/transparent"
             android:src="@drawable/setting"
-            app:tint="@color/purple_1"
+            app:tint="#909090"
             android:scaleType="centerInside"
             android:padding="8dp" />
 
@@ -180,8 +323,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:gravity="center"
-                android:text="Setting"
-                android:textColor="@color/purple_1"/>
+                android:text="Setting" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
