--- a/app/src/main/res/layout/light_layout.xml
+++ b/app/src/main/res/layout/light_layout.xml
@@ -78,12 +78,93 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ListView android:id="@+id/dimmer"
+    <LinearLayout android:id="@+id/dimmer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="196dp"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical">
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="12dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="12dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="12dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginTop="12dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="48dp"
+            android:layout_marginTop="12dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="64dp"
+            android:layout_marginTop="12dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="72dp"
+            android:layout_marginTop="12dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="88dp"
+            android:layout_marginTop="12dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:foreground="@drawable/box2"
+            android:background="@color/purple_1"
+            android:layout_marginHorizontal="104dp"
+            android:layout_marginTop="12dp"/>
+        
+        
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
